--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 01_Matematica_Ciencias_Datos/Leccion02/Tarea2_Los_Celtics_cache/latex/
 
 01_Matematica_Ciencias_Datos/Leccion02/Tarea2_Los_Celtics_files/figure-latex/
+05_Mineria_De_Datos/Trabajo1/Online Retail.xlsx
