--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 
 01_Matematica_Ciencias_Datos/Leccion02/Tarea2_Los_Celtics_files/figure-latex/
 05_Mineria_De_Datos/Trabajo1/Online Retail.xlsx
+05_Mineria_De_Datos/ProyectoFinal/Online Retail.xlsx
+05_Mineria_De_Datos/ProyectoFinal/ProyectoFinal_v2_cache/*
+05_Mineria_De_Datos/ProyectoFinal/ProyectoFinal_v2_files/*
+05_Mineria_De_Datos/ProyectoFinal/.RData
